feat: page thongtinnhanhang

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -57,6 +57,7 @@
 @import "pages/timkiemdonhang";
 @import "pages/lichsunaptien";
 @import "pages/giohang";
+@import "pages/thongtinnhanhang";
 
 @import 'themes/theme';
 @import 'themes/admin';
