--- a/scss/pages/_danhmucchitiet.scss
+++ b/scss/pages/_danhmucchitiet.scss
@@ -89,6 +89,7 @@
       }
     }
     &__section{
+      z-index: 2;
       border-radius: 28px 28px 0px 0px;
       background: var(--Color-Neutral-White, #FEFEFE);
 
