feat: page dangky

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -58,6 +58,7 @@
 @import "pages/lichsunaptien";
 @import "pages/giohang";
 @import "pages/thongtinnhanhang";
+@import "pages/dangky";
 
 @import 'themes/theme';
 @import 'themes/admin';
