--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -39,6 +39,8 @@ $colors: (
         'F1416C': #F1416C,
         '3F4254': #3F4254,
         '28303F': #28303F,
+        '6B6B6B': #6B6B6B,
+        '111827': #111827,
 );
 @each $name,$value in $colors {
   .text-#{$name} {
