feat: page dangky-success

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -59,6 +59,7 @@
 @import "pages/giohang";
 @import "pages/thongtinnhanhang";
 @import "pages/dangky";
+@import "pages/dangky-success";
 
 @import 'themes/theme';
 @import 'themes/admin';
