--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -41,6 +41,9 @@ $colors: (
         '28303F': #28303F,
         '6B6B6B': #6B6B6B,
         '111827': #111827,
+        '45484F': #45484F,
+        'EB4143': #EB4143,
+        '61646B': #61646B,
 );
 @each $name,$value in $colors {
   .text-#{$name} {
