--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -60,6 +60,7 @@
 @import "pages/thongtinnhanhang";
 @import "pages/dangky";
 @import "pages/dangky-success";
+@import "pages/xacthucmail";
 
 @import 'themes/theme';
 @import 'themes/admin';
