feat: page tintuc

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -62,6 +62,7 @@
 @import "pages/dangky-success";
 @import "pages/xacthucmail";
 @import "pages/dangnhap";
+@import "pages/tintuc";
 
 @import 'themes/theme';
 @import 'themes/admin';
