--- a/style.css
+++ b/style.css
@@ -703,6 +703,11 @@
   width: 200px;
 }
 
+.width-240px {
+  max-width: 100%;
+  width: 240px;
+}
+
 .width-298px {
   max-width: 100%;
   width: 298px;
@@ -1587,6 +1592,26 @@
 .xacthucmail__number {
   width: 44px;
   height: 44px;
+}
+
+.tintuc__card__overlay {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 66.3%);
+}
+.tintuc__card__label {
+  border-radius: 0px 20px;
+  background: rgba(0, 0, 0, 0.6);
+}
+.tintuc__card__label span {
+  backdrop-filter: blur(1.5px);
+  background: var(--brand-color, linear-gradient(284deg, #FFC01F -30.8%, #FFF38C 155.96%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.tintuc__item:nth-child(n+2) {
+  margin-top: 16px;
+  padding-top: 16px;
+  border-top: 1px solid var(--Divider, #EBE9E3);
 }
 
 /*# sourceMappingURL=style.css.map */
