feat: page tintuc-detail

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -63,6 +63,7 @@
 @import "pages/xacthucmail";
 @import "pages/dangnhap";
 @import "pages/tintuc";
+@import "pages/tintuc-detail";
 
 @import 'themes/theme';
 @import 'themes/admin';
