--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -56,6 +56,9 @@
     &--login-facebook{
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='21' height='20' viewBox='0 0 21 20' fill='none'%3E%3Crect x='0.75' width='20' height='20' rx='10' fill='%231877F2'/%3E%3Cpath d='M14.6426 12.8906L15.0859 10H12.3125V8.125C12.3125 7.33398 12.6992 6.5625 13.9414 6.5625H15.2031V4.10156C15.2031 4.10156 14.0586 3.90625 12.9648 3.90625C10.6797 3.90625 9.1875 5.29102 9.1875 7.79688V10H6.64844V12.8906H9.1875V19.8789C9.69727 19.959 10.2188 20 10.75 20C11.2812 20 11.8027 19.959 12.3125 19.8789V12.8906H14.6426Z' fill='white'/%3E%3C/svg%3E");
     }
+    &--share-rectangle{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='none'%3E%3Cg clip-path='url(%23clip0_13625_55399)'%3E%3Cpath d='M6.66675 13.3327C6.66675 9.99935 10.0001 8.33268 13.3334 8.33268M13.3334 8.33268L11.6667 10.8327M13.3334 8.33268L10.8334 6.66602M5.00008 18.3327H15.0001C16.841 18.3327 18.3334 16.8403 18.3334 14.9993V4.99935C18.3334 3.1584 16.841 1.66602 15.0001 1.66602H5.00008C3.15913 1.66602 1.66675 3.1584 1.66675 4.99935V14.9993C1.66675 16.8403 3.15913 18.3327 5.00008 18.3327Z' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_13625_55399'%3E%3Crect width='20' height='20' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+    }
   }
   $x:24px;
   &__#{$x}{
