feat: page tacgia

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -64,6 +64,7 @@
 @import "pages/dangnhap";
 @import "pages/tintuc";
 @import "pages/tintuc-detail";
+@import "pages/tacgia";
 
 @import 'themes/theme';
 @import 'themes/admin';
