--- a/scss/components/_line-height.scss
+++ b/scss/components/_line-height.scss
@@ -8,6 +8,7 @@ $sizes:(
         '133': 1.33333,
         '142': 1.42857,
         '150': 1.50,
+        '160': 1.60,
         '166': 1.66667,
         '167': 1.67,
         '171': 1.71429,
