--- a/style.css
+++ b/style.css
@@ -349,6 +349,64 @@
 }
 
 @media (min-width: 1600px) {
+  .uk-grid-20-xl {
+    margin-left: -20px !important;
+  }
+  .uk-grid-20-xl > * {
+    padding-left: 20px !important;
+  }
+  .uk-grid-20-xl > .uk-grid-margin {
+    margin-top: 20px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .uk-grid-20-l {
+    margin-left: -20px !important;
+  }
+  .uk-grid-20-l > * {
+    padding-left: 20px !important;
+  }
+  .uk-grid-20-l > .uk-grid-margin {
+    margin-top: 20px !important;
+  }
+}
+
+@media (min-width: 960px) {
+  .uk-grid-20-m {
+    margin-left: -20px !important;
+  }
+  .uk-grid-20-m > * {
+    padding-left: 20px !important;
+  }
+  .uk-grid-20-m > .uk-grid-margin {
+    margin-top: 20px !important;
+  }
+}
+
+@media (min-width: 640px) {
+  .uk-grid-20-s {
+    margin-left: -20px !important;
+  }
+  .uk-grid-20-s > * {
+    padding-left: 20px !important;
+  }
+  .uk-grid-20-s > .uk-grid-margin {
+    margin-top: 20px !important;
+  }
+}
+
+.uk-grid-20 {
+  margin-left: -20px;
+}
+.uk-grid-20 > * {
+  padding-left: 20px;
+}
+.uk-grid-20 > .uk-grid-margin {
+  margin-top: 20px;
+}
+
+@media (min-width: 1600px) {
   .uk-grid-28-xl {
     margin-left: -28px !important;
   }
@@ -617,6 +675,10 @@
   color: #61646b;
 }
 
+.text-FFD448 {
+  color: #ffd448;
+}
+
 .item-2px:nth-child(n+2) {
   margin-top: 2px;
 }
@@ -815,6 +877,10 @@
 
 .lh-150 {
   line-height: 1.5;
+}
+
+.lh-160 {
+  line-height: 1.6;
 }
 
 .lh-166 {
@@ -1622,6 +1688,14 @@
 }
 .tintuc-detail__article > *:nth-child(n+2) {
   margin-top: 12px;
+}
+
+.tacgia__card__overlay {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 100%);
+}
+.tacgia__card__position-small {
+  --uk-position-margin-offset: 12px;
+  margin: var(--uk-position-margin-offset);
 }
 
 /*# sourceMappingURL=style.css.map */
