feat: page tacgia-detail

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -65,6 +65,7 @@
 @import "pages/tintuc";
 @import "pages/tintuc-detail";
 @import "pages/tacgia";
+@import "pages/tacgia-detail";
 
 @import 'themes/theme';
 @import 'themes/admin';
