--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -66,6 +66,7 @@
 @import "pages/tintuc-detail";
 @import "pages/tacgia";
 @import "pages/tacgia-detail";
+@import "pages/nxb";
 
 @import 'themes/theme';
 @import 'themes/admin';
