feat: page nxb-detail

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -67,6 +67,7 @@
 @import "pages/tacgia";
 @import "pages/tacgia-detail";
 @import "pages/nxb";
+@import "pages/nxb-detail";
 
 @import 'themes/theme';
 @import 'themes/admin';
