--- a/scss/components/_padding.scss
+++ b/scss/components/_padding.scss
@@ -10,6 +10,7 @@ $sizes:(
 $sizes:(
         '0-12' 0 12px,
         '6-12' 6px 12px,
+        '0-8' 0 8px,
 );
 @each $name,$value1,$value2 in $sizes {
   .padding-#{$name} {
