--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,4 +1,24 @@
 .footer{
+  &__top{
+    &__hotline{
+      background: var(--brand-color, linear-gradient(284deg, #FFC01F -30.8%, #FFF38C 155.96%));
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    &__nav{
+      >li{
+        >a{
+          @extend .fz-14px;
+          @extend .text-999;
+          @extend .be-vietnam-pro-600;
+        }
+      }
+    }
+  }
+  &__bottom{
+    border-top: 1px solid #444;
+  }
   &__navbar{
     border-radius: 24px 24px 0px 0px;
     background: var(--Color-Neutral-White, #FEFEFE);
