feat: page quenmatkhau-email

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -68,6 +68,7 @@
 @import "pages/tacgia-detail";
 @import "pages/nxb";
 @import "pages/nxb-detail";
+@import "pages/quenmatkhau";
 
 @import 'themes/theme';
 @import 'themes/admin';
