feat: page chitietsach

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -69,6 +69,7 @@
 @import "pages/nxb";
 @import "pages/nxb-detail";
 @import "pages/quenmatkhau";
+@import "pages/chitietsach";
 
 @import 'themes/theme';
 @import 'themes/admin';
