--- a/scss/components/_line-height.scss
+++ b/scss/components/_line-height.scss
@@ -12,6 +12,7 @@ $sizes:(
         '166': 1.66667,
         '167': 1.67,
         '171': 1.71429,
+        '200': 2.00,
 );
 @each $name,$value in $sizes {
   .lh-#{$name}{
