--- a/scss/components/_background.scss
+++ b/scss/components/_background.scss
@@ -22,6 +22,8 @@ $colors: (
         '1B1B1B': #1B1B1B,
         '000': #000,
         '20232D': #20232D,
+        'FFFCE8': #FFFCE8,
+        'DFDFDF': #DFDFDF,
 );
 @each $name,$value in $colors {
   .bg-#{$name} {
