--- a/scss/components/_padding.scss
+++ b/scss/components/_padding.scss
@@ -11,6 +11,7 @@ $sizes:(
         '0-12' 0 12px,
         '6-12' 6px 12px,
         '0-8' 0 8px,
+        '4-8' 4px 8px,
 );
 @each $name,$value1,$value2 in $sizes {
   .padding-#{$name} {
