--- a/style.css
+++ b/style.css
@@ -291,6 +291,64 @@
 }
 
 @media (min-width: 1600px) {
+  .uk-grid-10-xl {
+    margin-left: -10px !important;
+  }
+  .uk-grid-10-xl > * {
+    padding-left: 10px !important;
+  }
+  .uk-grid-10-xl > .uk-grid-margin {
+    margin-top: 10px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .uk-grid-10-l {
+    margin-left: -10px !important;
+  }
+  .uk-grid-10-l > * {
+    padding-left: 10px !important;
+  }
+  .uk-grid-10-l > .uk-grid-margin {
+    margin-top: 10px !important;
+  }
+}
+
+@media (min-width: 960px) {
+  .uk-grid-10-m {
+    margin-left: -10px !important;
+  }
+  .uk-grid-10-m > * {
+    padding-left: 10px !important;
+  }
+  .uk-grid-10-m > .uk-grid-margin {
+    margin-top: 10px !important;
+  }
+}
+
+@media (min-width: 640px) {
+  .uk-grid-10-s {
+    margin-left: -10px !important;
+  }
+  .uk-grid-10-s > * {
+    padding-left: 10px !important;
+  }
+  .uk-grid-10-s > .uk-grid-margin {
+    margin-top: 10px !important;
+  }
+}
+
+.uk-grid-10 {
+  margin-left: -10px;
+}
+.uk-grid-10 > * {
+  padding-left: 10px;
+}
+.uk-grid-10 > .uk-grid-margin {
+  margin-top: 10px;
+}
+
+@media (min-width: 1600px) {
   .uk-grid-12-xl {
     margin-left: -12px !important;
   }
@@ -763,6 +821,16 @@
   margin-top: 64px;
 }
 
+.width-20px {
+  max-width: 100%;
+  width: 20px;
+}
+
+.width-100px {
+  max-width: 100%;
+  width: 100px;
+}
+
 .width-160px {
   max-width: 100%;
   width: 160px;
@@ -825,6 +893,10 @@
 
 .rounded-10px {
   border-radius: 10px;
+}
+
+.rounded-12px {
+  border-radius: 12px;
 }
 
 .rounded-15px {
@@ -903,6 +975,10 @@
   line-height: 1.71429;
 }
 
+.lh-200 {
+  line-height: 2;
+}
+
 .bg-000-FFF {
   background: rgba(0, 0, 0, 0.5);
 }
@@ -971,7 +1047,7 @@
   background: #FCD9E2;
 }
 
-.bg-E6E6E6 {
+.bg-E6E6E6, .chitietsach__column:nth-child(n+2) .chitietsach__item:before {
   background: #E6E6E6;
 }
 
@@ -993,6 +1069,14 @@
 
 .bg-20232D {
   background: #20232D;
+}
+
+.bg-FFFCE8 {
+  background: #FFFCE8;
+}
+
+.bg-DFDFDF {
+  background: #DFDFDF;
 }
 
 .mh-38 {
@@ -1037,6 +1121,10 @@
 
 .padding-0-8 {
   padding: 0 8px;
+}
+
+.padding-4-8 {
+  padding: 4px 8px;
 }
 
 .divider {
@@ -1127,6 +1215,12 @@
   display: flex;
   background-position: center;
   background-repeat: no-repeat;
+}
+.icons__24px--cart-check {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M11 20.5C11 21.3284 10.3284 22 9.5 22C8.67157 22 8 21.3284 8 20.5C8 19.6716 8.67157 19 9.5 19C10.3284 19 11 19.6716 11 20.5Z' stroke='%23966412' stroke-width='1.5'/%3E%3Cpath d='M20 20.5C20 21.3284 19.3284 22 18.5 22C17.6716 22 17 21.3284 17 20.5C17 19.6716 17.6716 19 18.5 19C19.3284 19 20 19.6716 20 20.5Z' stroke='%23966412' stroke-width='1.5'/%3E%3Cpath d='M11 11L12.7528 12.4023C13.1707 12.7366 13.7777 12.6826 14.1301 12.2799L17 9' stroke='%23966412' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6 4H18C20.2091 4 22 5.79086 22 8V13C22 15.2091 20.2091 17 18 17H10C7.79086 17 6 15.2091 6 13V4ZM6 4C6 2.89543 5.10457 2 4 2H2' stroke='%23966412' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+.icons__24px--shopping-bag-add {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cpath d='M9.5 6L9.5 7C9.5 8.65685 10.8431 10 12.5 10C14.1569 10 15.5 8.65685 15.5 7V6' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M21.1668 13L20.0572 6.3424C19.7357 4.41365 18.0669 3 16.1116 3H8.8886C6.93325 3 5.26449 4.41365 4.94303 6.3424L3.27636 16.3424C2.87001 18.7805 4.75018 21 7.22194 21H13.5001' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M19.5 15L19.5 21' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M22.5 18L16.5 18' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 .icons__24px--book {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M11.25 5.37808C9.13095 3.92228 6.18953 3.25933 3.99433 3.01127C2.89642 2.88721 2 3.80402 2 4.93518V16.2C2 17.3311 2.89642 18.2483 3.99433 18.3723C6.18953 18.6204 9.13095 19.2833 11.25 20.7391V5.37808ZM12.75 20.7391C14.869 19.2833 17.8105 18.6204 20.0057 18.3723C21.1036 18.2483 22 17.3311 22 16.2V4.93518C22 3.80402 21.1036 2.88721 20.0057 3.01127C17.8105 3.25933 14.869 3.92228 12.75 5.37808V20.7391ZM4.25884 8.13986C4.32223 7.73052 4.70545 7.45008 5.11478 7.51347C6.41756 7.71523 7.88471 8.05247 9.27051 8.58836C9.65684 8.73775 9.84892 9.17205 9.69952 9.55838C9.55012 9.94471 9.11583 10.1368 8.7295 9.98739C7.47085 9.50067 6.11399 9.1861 4.88522 8.9958C4.47588 8.93241 4.19544 8.54919 4.25884 8.13986ZM5.11478 11.5135C4.70545 11.4501 4.32223 11.7305 4.25884 12.1399C4.19544 12.5492 4.47588 12.9324 4.88522 12.9958C5.50446 13.0917 6.15813 13.2195 6.81653 13.3856C7.21815 13.4869 7.62588 13.2435 7.72721 12.8418C7.82854 12.4402 7.5851 12.0325 7.18347 11.9311C6.47447 11.7523 5.77452 11.6156 5.11478 11.5135Z' fill='%23966412'/%3E%3C/svg%3E");
@@ -1772,6 +1866,31 @@
   text-transform: inherit;
   white-space: nowrap;
   vertical-align: top;
+}
+.chitietsach__item {
+  position: relative;
+}
+.chitietsach__column:first-child .chitietsach__item {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+.chitietsach__column:last-child .chitietsach__item {
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.chitietsach__column:nth-child(n+2) .chitietsach__item {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.chitietsach__column:nth-child(n+2) .chitietsach__item:before {
+  content: "";
+  width: 1px;
+  height: 26px;
+  display: flex;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /*# sourceMappingURL=style.css.map */
