feat: page danhgia

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -70,6 +70,7 @@
 @import "pages/nxb-detail";
 @import "pages/quenmatkhau";
 @import "pages/chitietsach";
+@import "pages/danhgia";
 
 @import 'themes/theme';
 @import 'themes/admin';
