feat: page vietdanhgia

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -71,6 +71,7 @@
 @import "pages/quenmatkhau";
 @import "pages/chitietsach";
 @import "pages/danhgia";
+@import "pages/vietdanhgia";
 
 @import 'themes/theme';
 @import 'themes/admin';
