feat: page thanhtoanlandau-nhapthongtin

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -72,6 +72,7 @@
 @import "pages/chitietsach";
 @import "pages/danhgia";
 @import "pages/vietdanhgia";
+@import "pages/thanhtoanlandau";
 
 @import 'themes/theme';
 @import 'themes/admin';
