feat: page phuongthucthanhtoan

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -73,6 +73,7 @@
 @import "pages/danhgia";
 @import "pages/vietdanhgia";
 @import "pages/thanhtoanlandau";
+@import "pages/phuongthucthanhtoan";
 
 @import 'themes/theme';
 @import 'themes/admin';
