--- a/scss/components/_borders.scss
+++ b/scss/components/_borders.scss
@@ -23,3 +23,6 @@ $sizes:(
 .bd-1-E5E5E5{
   border: var(----f1-number-1, 1px) solid var(--200, #E5E5E5);
 }
+.bd-1-F6F6F6{
+  border: var(----f1-number-1, 1px) solid var(--200, #F6F6F6);
+}
