--- a/style.css
+++ b/style.css
@@ -923,6 +923,10 @@
   border: var(----f1-number-1, 1px) solid var(--200, #E5E5E5);
 }
 
+.bd-1-F6F6F6 {
+  border: var(----f1-number-1, 1px) solid var(--200, #F6F6F6);
+}
+
 .lh-114 {
   line-height: 1.14286;
 }
@@ -1215,6 +1219,9 @@
   display: flex;
   background-position: center;
   background-repeat: no-repeat;
+}
+.icons__24px--card {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='21' height='18' viewBox='0 0 21 18' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16.5 0C18.4528 0 20.0787 1.39935 20.4298 3.25L0.570198 3.25C0.921252 1.39935 2.54721 0 4.5 0H16.5ZM20.5 7.25V4.75L0.5 4.75V7.25H20.5ZM20.5 8.75L0.5 8.75V14C0.5 16.2091 2.29086 18 4.5 18H16.5C18.7091 18 20.5 16.2091 20.5 14V8.75ZM4.5 15C5.05228 15 5.5 14.5523 5.5 14C5.5 13.4477 5.05228 13 4.5 13C3.94772 13 3.5 13.4477 3.5 14C3.5 14.5523 3.94772 15 4.5 15Z' fill='%23966412'/%3E%3C/svg%3E");
 }
 .icons__24px--invoice {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='19' height='20' viewBox='0 0 19 20' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4.5 0C2.29086 0 0.5 1.79086 0.5 4V16C0.5 18.2091 2.29086 20 4.5 20H14.5C16.7091 20 18.5 18.2091 18.5 16V4C18.5 1.79086 16.7091 0 14.5 0H4.5ZM14.5 5.75C14.9142 5.75 15.25 5.41421 15.25 5C15.25 4.58579 14.9142 4.25 14.5 4.25L4.5 4.25C4.08579 4.25 3.75 4.58579 3.75 5C3.75 5.41421 4.08579 5.75 4.5 5.75L14.5 5.75ZM15.25 10C15.25 10.4142 14.9142 10.75 14.5 10.75L4.5 10.75C4.08579 10.75 3.75 10.4142 3.75 10C3.75 9.58579 4.08579 9.25 4.5 9.25L14.5 9.25C14.9142 9.25 15.25 9.58579 15.25 10ZM9.5 15.75C9.91421 15.75 10.25 15.4142 10.25 15C10.25 14.5858 9.91421 14.25 9.5 14.25L4.5 14.25C4.08579 14.25 3.75 14.5858 3.75 15C3.75 15.4142 4.08579 15.75 4.5 15.75L9.5 15.75Z' fill='%23966412'/%3E%3C/svg%3E");
